--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.45.2",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
+    "svelte-preprocess": "^4.10.1",
     "tslib": "^2.0.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "bulma": "^0.9.3",
+    "node-sass": "^7.0.1",
     "rollup-plugin-postcss": "^4.0.2",
     "sirv-cli": "^1.0.0",
     "svelte-fa": "^2.4.0"
